第二次提交

--- a/springBoot-2/src/main/resources/application.properties
+++ b/springBoot-2/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #打印出自动生产的SQL，方便调试的时候查看
 spring.jpa.show-sql= true
+
+spring.thymeleaf.cache=false
